# resume-shortlister

./: README.md  app.py  pyproject.toml
src/resume_shortlisting/: crew.py  main.py
src/resume_shortlisting/config/: agents.yaml  tasks.yaml
src/resume_shortlisting/tools/: __init__.py  custom_tool.py
