[project]
name = "resume_shortlisting"
version = "0.1.0"
description = "Resume-Shortlisting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
resume_shortlisting = "resume_shortlisting.main:run"
run_crew = "resume_shortlisting.main:run"
train = "resume_shortlisting.main:train"
replay = "resume_shortlisting.main:replay"
test = "resume_shortlisting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
