[project]
name = "resume_shortlisting"
version = "0.1.0"
description = "Resume-Shortlisting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pysqlite3-binary == 0.5.4",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0",
    "pathlib2>=2.3.0;python_version<'3.4'",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
resume_shortlisting = "resume_shortlisting.main:run"
run_crew = "resume_shortlisting.main:run"
train = "resume_shortlisting.main:train"
replay = "resume_shortlisting.main:replay"
test = "resume_shortlisting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
